--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Title</title>
-
-  <link rel="manifest" href="manifest.json">
+  <title>Авиабилеты - Результаты поиска</title>
 </head>
 
 <body>
